--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
-    "org.apache.cordova.device",
     "org.apache.cordova.console",
-    "com.ionic.keyboard"
+    "com.ionic.keyboard",
+    "cordova-plugin-device"
   ],
   "cordovaPlatforms": []
 }
