--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "cordovaPlugins": [
     "org.apache.cordova.console",
     "com.ionic.keyboard",
-    "cordova-plugin-device"
+    "cordova-plugin-device",
+    "https://github.com/katzer/cordova-plugin-local-notifications"
   ],
   "cordovaPlatforms": []
 }
