--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "mediApp",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-rc.5"
+    "ionic": "driftyco/ionic-bower#1.0.0"
   },
   "dependencies": {
     "moment": "~2.10.3"
