--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "org.apache.cordova.console",
     "com.ionic.keyboard",
     "cordova-plugin-device",
-    "https://github.com/katzer/cordova-plugin-local-notifications"
+    "https://github.com/katzer/cordova-plugin-local-notifications",
+    "de.appplant.cordova.plugin.local-notification"
   ],
   "cordovaPlatforms": [
     "android"
