--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "com.ionic.keyboard",
     "cordova-plugin-device",
     "https://github.com/katzer/cordova-plugin-local-notifications",
-    "de.appplant.cordova.plugin.local-notification"
+    "de.appplant.cordova.plugin.local-notification",
+    "org.apache.cordova.splashscreen"
   ],
   "cordovaPlatforms": [
     "android"
